cmake_minimum_required(VERSION 3.0)
project(crtb_net)

add_executable(server server.c)
add_executable(client client.c)
add_executable(downloader downloader.c)
add_executable(async_client async_client.c)
add_executable(async_client2 async_client2.c)
add_executable(dir_lister dir_lister.c)
target_link_libraries(server PRIVATE crtb_net)
target_link_libraries(client PRIVATE crtb_net)
target_link_libraries(downloader PRIVATE crtb_net)
target_link_libraries(async_client PRIVATE crtb_net)
target_link_libraries(async_client2 PRIVATE crtb_net)
target_link_libraries(dir_lister PRIVATE crtb_net)
if(CRTB_ENABLE_SSL)
    add_executable(ssl_client ssl_client.c)
    add_executable(ssl_server ssl_server.c)
    target_link_libraries(ssl_client PRIVATE crtb_net)
    target_link_libraries(ssl_server PRIVATE crtb_net)
endif()